# Neural-network-skeleton

./: CMakeLists.txt
.github/workflows/: generate_docs.yml
NeuralNet_Foundation/: FirstTest.cpp  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  README.md  secondtest.cpp
docs/: summary.txt
